# Expence

./: .gitignore  config.py  pyproject.toml  requirements.txt  structure.txt  vercel.json
api/: app.py
app/templates/: index.html
app/utils/: expense_processor.py
expense_tracker/: requirements.txt
expense_tracker/app/: __init__.py
expense_tracker/app/static/css/: style.css
expense_tracker/app/static/js/: main.js
expense_tracker/app/uploads/: daily_expense.csv  simple_daily_expense.csv
